Change Symbol of copy

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="footer">
         <div>
-            <span><strong>© Ayoub LACHHAB</strong></span>
+            <span><strong>&copy; Ayoub LACHHAB</strong></span>
             <br> <span>Maharishi international university</span>
             <br> <span>Address: 1000 N 4th St, Fairfield, IA 52557 </span>
             <br> <span>Email : <a href="#">alachhab@miu.edu</a></span>
