Add link of Lab 2

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <h1 style="padding: 15px;"><strong>Ayoub LACHHAB</strong></h1>
     <div class="body">
         <ul>
-            <li><a href="#">lab01 - Home page</a></li>
-            <li><a href="#">lab02 - About me</a></li>
-            <li><a href="#">lab02 - Receipe</a></li>
+            <li><a href="/">lab01 - Home page</a></li>
+            <li><a href="aboutme.html">lab02 - About me</a></li>
+            <li><a href="pie.html">lab02 - Receipe</a></li>
             <li><a href="#">lab03 - Movie Review</a></li>
             <li><a href="#">lab04</a></li>
             <li><a href="#">lab05</a></li>
