--- a/aboutme.html
+++ b/aboutme.html
@@ -88,7 +88,7 @@
             </a>
             <a href="http://validator.w3.org/css-validator/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
         document.URL">
-                <img src="pictures/vcss.gif" alt="Valid CSS!" /></a>
+                <img src="pictures/vcss.gif" alt="Valid CSS!" />
             </a>
         </div>
     </footer>
