--- a/aboutme.html
+++ b/aboutme.html
@@ -82,12 +82,12 @@
             <span><strong>&copy; Ayoub LACHHAB</strong></span>
         </div>
         <div>
-            <a href="https://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
-            document.URL">
+           <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
+                document.URL">
                 <img src="pictures/w3c-html.png" alt="html validator" />
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
-        document.URL">
+            <a href="http://validator.w3.org/css-validator/check?uri=referer" onclick="this.href='http://validator.w3.org/css-validator/check?uri=' +
+            document.URL">
                 <img src="pictures/vcss.gif" alt="Valid CSS!" />
             </a>
         </div>
