--- a/aboutme.html
+++ b/aboutme.html
@@ -86,10 +86,11 @@
                 document.URL">
                 <img src="pictures/w3c-html.png" alt="html validator" />
             </a>
-            <a href="http://validator.w3.org/css-validator/check?uri=referer" onclick="this.href='http://validator.w3.org/css-validator/check?uri=' +
-            document.URL">
-                <img src="pictures/vcss.gif" alt="Valid CSS!" />
-            </a>
+           <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
         </div>
     </footer>
 </body>
