--- a/aboutme.html
+++ b/aboutme.html
@@ -86,10 +86,11 @@
                 document.URL">
                 <img src="pictures/w3c-html.png" alt="html validator" />
             </a>
-            <a href="http://jigsaw.w3.org/css-validator/check?uri=referer" onclick="this.href='http://jigsaw.w3.org/css-validator/check?uri=' +
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=referer" onclick="this.href='http://jigsaw.w3.org/css-validator/validator?uri=' +
             document.URL">
                 <img src="pictures/vcss.gif" alt="Valid CSS!" />
             </a>
+
             
             
         </div>
