--- a/pie.html
+++ b/pie.html
@@ -219,13 +219,14 @@
                         </div>
                         <div>
                             <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
-            document.URL">
+                            document.URL">
                                 <img src="pictures/w3c-html.png" alt="html validator" />
                             </a>
-                            <a href="http://validator.w3.org/css-validator/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
-        document.URL">
+                            <a href="http://jigsaw.w3.org/css-validator/validator?uri=referer" onclick="this.href='http://jigsaw.w3.org/css-validator/validator?uri=' +
+                        document.URL">
                                 <img src="pictures/vcss.gif" alt="Valid CSS!" />
                             </a>
+
                         </div>
                     </footer>
                 </body>
