--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 
         <div class="header">
-            <img src="https://media-exp1.licdn.com/dms/image/C5103AQF39hdqHDwiCQ/profile-displayphoto-shrink_400_400/0/1563195274807?e=1622073600&v=beta&t=tX-4PHW8oY3GRkXZ8S65FAU_IW75fjZ_Z2j0qs6IsfU" alt="lachhab ayoub picture"
-                style="border-radius: 50%; border: 1px solid black; height:125%">
+            <img src="https://media-exp1.licdn.com/dms/image/C5103AQF39hdqHDwiCQ/profile-displayphoto-shrink_400_400/0/1563195274807?e=1622073600&v=beta&t=tX-4PHW8oY3GRkXZ8S65FAU_IW75fjZ_Z2j0qs6IsfU"
+                alt="lachhab ayoub picture" style="border-radius: 50%; border: 1px solid black; height:125%">
 
         </div>
     </header>
@@ -84,11 +84,12 @@
         </div>
 
         <div class="verify_logos ">
+
             <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
                 document.URL">
                 <img src="pictures/w3c-html.png" alt="html validator" />
             </a>
-            <a href="http://validator.w3.org/css-validator/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=referer" onclick="this.href='http://jigsaw.w3.org/css-validator/validator?uri=' +
             document.URL">
                 <img src="pictures/vcss.gif" alt="Valid CSS!" />
             </a>
