--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1 style="padding: 15px;"><strong>Ayoub LACHHAB</strong></h1>
     <div class="body">
         <ul>
-            <li><a href="/">Ayoub Lachhab Portfolio</a></li>
+            <li><a href="/">Ayoub LACHHAB Portfolio</a></li>
             <li><a href="index.html">lab01 - Home page</a></li>
             <li><a href="aboutme.html">lab02 - About me</a></li>
             <li><a href="pie.html">lab02 - Receipe</a></li>
