--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>About Me Page</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=1" />
 </head>
 
 <body>
