--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li><a href="index.html">lab01 - Home page</a></li>
             <li><a href="aboutme.html">lab02 - About me</a></li>
             <li><a href="pie.html">lab02 - Receipe</a></li>
-            <li><a href="#">lab03 - Movie Review</a></li>
+            <li><a href="movie.html">lab03 - Movie Review</a></li>
             <li><a href="#">lab04</a></li>
             <li><a href="#">lab05</a></li>
             <li><a href="#">lab06</a></li>
