--- a/movie.html
+++ b/movie.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- 
-    This lab took the way I layout the web page even further than what I imagined. I faced a lot of problems, to be honest. 
-    I have spent more than 5 hours to get the job done. 
-    Most of the problem came from layout the element such as making sure the elements are center, 
-    making sure the border of the main content is perfectly fit the layout (I finally came up with the property "box-shadow: 0 0 0 4px grey;"). 
-    The most painful problem was splitting user reviews into 2 columns which require a balanced space horizontally 
-    and keeping the review order as same as the provided skeleton. 
--->
 
 <head>
     <title>TMNT - Rancid Tomatoes</title>
     <meta charset="utf-8">
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="css/movie.css" type="text/css" rel="stylesheet">
 </head>
 
 <body data-gr-c-s-loaded="true">
     <div id="banner">
-        <img src="images/banner.png" alt="Rancid Tomatoes">
+        <img src="pictures/banner.png" alt="Rancid Tomatoes">
     </div>
     <div class="container">
         <div id="movie-name">
@@ -27,22 +19,19 @@
             <div class="main-content">
                 <div id="left-container">
                     <div class="top">
-                        <img src="images/rottenbig.png" alt="Rotten">
+                        <img src="pictures/rottenbig.png" alt="Rotten">
                         <span>33%</span>
                     </div>
                     <div class="bottom">
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
-                                    <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent
-                                        corniness, the movie attempts to look polished and 'cool,' but the been-there
-                                        animation can't compete with the then-cutting-edge puppetry of the 1990
-                                        live-action movie.</q>
+                                    <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Peter Debruge <br><span class="publication">Variety</span>
                                 </div>
@@ -51,14 +40,13 @@
 
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/fresh.gif" alt="Fresh">
+                                <img src="pictures/fresh.gif" alt="Fresh">
                                 <div>
-                                    <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and
-                                        generate a legion of new ones.</q>
+                                    <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Todd Gilchrist <br> <span class="publication">IGN Movies</span>
                                 </div>
@@ -66,13 +54,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
                                     <q>It stinks!</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Jay Sherman (unemployed)
                                 </div>
@@ -80,14 +68,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
-                                    <q>The rubber suits are gone and they've been redone with fancy computer technology,
-                                        but that hasn't stopped them from becoming dull.</q>
+                                    <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Joshua Tyler <br> <span class="publication">CinemaBlend.com</span>
                                 </div>
@@ -95,17 +82,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
-                                    <q>Very dark movie, way too serious, way too realistic in my opinion for a kids
-                                        cartoon movie. This is CGI and it looks real and the story is just not fun
-                                        enough, which makes it too old for my 6 year old. The bad guys are pretty dark
-                                        and intense, they should have gone for more "cowabunga" and less "lord of the
-                                        rings."</q>
+                                    <q>Very dark movie, way too serious, way too realistic in my opinion for a kids cartoon movie. This is CGI and it looks real and the story is just not fun enough, which makes it too old for my 6 year old. The bad guys are pretty dark and intense, they should have gone for more "cowabunga" and less "lord of the rings."</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Charles <br> <span class="publication">CNN</span>
                                 </div>
@@ -113,15 +96,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
-                                    <q>The turtles themselves may look prettier, but are no smarter; torn irreparably
-                                        from their countercultural roots, our superheroes on the half shell have been
-                                        firmly co-opted by the industry their creators once sought to spoof.</q>
+                                    <q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Jeannette Catsoulis <br> <span class="publication">New York Times</span>
                                 </div>
@@ -129,14 +110,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
-                                    <q>Impersonally animated and arbitrarily plotted, the story appears to have been
-                                        made up as the filmmakers went along.</q>
+                                    <q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Ed Gonzalez <br> <span class="publication">Slant Magazine</span>
                                 </div>
@@ -144,14 +124,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/fresh.gif" alt="Fresh">
+                                <img src="pictures/fresh.gif" alt="Fresh">
                                 <div>
-                                    <q>The striking use of image and motion allows each sequence to leave an impression.
-                                        It's an accomplished restart to this franchise.</q>
+                                    <q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Mark Palermo <br> <span class="publication">Coast (Halifax, Nova Scotia)</span>
                                 </div>
@@ -159,14 +138,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
-                                    <q>The script feels like it was computer generated. This mechanical presentation
-                                        lacks the cheesy charm of the three live action films.</q>
+                                    <q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Steve Rhodes <br> <span class="publication">Internet Reviews</span>
                                 </div>
@@ -174,13 +152,13 @@
                         </div>
                         <div class="review">
                             <div class="review-text">
-                                <img src="images/rotten.gif" alt="Rotten">
+                                <img src="pictures/rotten.gif" alt="Rotten">
                                 <div>
                                     <q>The movie was so amazing</q>
                                 </div>
                             </div>
                             <div class="reviewer">
-                                <img src="images/critic.gif" alt="Critic">
+                                <img src="pictures/critic.gif" alt="Critic">
                                 <div>
                                     Tien Khanh Nguyen <br> <span class="publication">MIU Publication</span>
                                 </div>
@@ -190,7 +168,7 @@
                 </div>
                 <div id="right-container">
                     <div class="top">
-                        <img src="images/overview.png" alt="general overview">
+                        <img src="pictures/overview.png" alt="general overview">
                     </div>
                     <div class="bottom">
                         <dl>
@@ -207,11 +185,10 @@
                             <dd>Mar 23, 2007</dd>
 
                             <dt>MOVIE SYNOPSIS</dt>
-                            <dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart
-                                as a family.</dd>
+                            <dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
 
                             <dt>MPAA RATING</dt>
-                            <dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+                            <dd>PG, for animated action violence, some scary cartoon pictures and mild language</dd>
 
                             <dt>RELEASE COMPANY</dt>
                             <dd>Warner Bros.</dd>
@@ -220,8 +197,7 @@
                             <dd>90 mins</dd>
 
                             <dt>GENRE</dt>
-                            <dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated
-                                Characters</dd>
+                            <dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
 
                             <dt>BOX OFFICE</dt>
                             <dd>$54,132,596</dd>
@@ -230,8 +206,7 @@
                             <dd>
                                 <ul>
                                     <li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-                                    <li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT
-                                            Review</a></li>
+                                    <li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
                                     <li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
                                     <li><a href="http://mumstudents.org/cs472/">CS472</a></li>
                                 </ul>
@@ -246,15 +221,8 @@
         </div>
     </div>
     <div id="certificates">
-        <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
-        document.URL">
-            <img src="pictures/w3c-html.png" alt="html validator" />
-        </a>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=referer" onclick="this.href='http://jigsaw.w3.org/css-validator/validator?uri=' +
-    document.URL">
-            <img src="pictures/vcss.gif" alt="Valid CSS!" />
-        </a>
-
+        <a href="https://validator.w3.org/nu/" target="blank"><img src="pictures/w3c-html.png" alt="Valid HTML5"></a> <br>
+        <a href="http://jigsaw.w3.org/css-validator/" target="blank"><img src="pictures/w3c-css.png" alt="Valid CSS"></a>
     </div>
 </body>
 
