--- a/movie.html
+++ b/movie.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- 
+    This lab took the way I layout the web page even further than what I imagined. I faced a lot of problems, to be honest. 
+    I have spent more than 5 hours to get the job done. 
+    Most of the problem came from layout the element such as making sure the elements are center, 
+    making sure the border of the main content is perfectly fit the layout (I finally came up with the property "box-shadow: 0 0 0 4px grey;"). 
+    The most painful problem was splitting user reviews into 2 columns which require a balanced space horizontally 
+    and keeping the review order as same as the provided skeleton. 
+-->
 
 <head>
     <title>TMNT - Rancid Tomatoes</title>
