--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <h1 style="padding: 15px;"><strong>Ayoub LACHHAB</strong></h1>
     <div class="body">
         <ul>
-            <li><a href="/">Ayoub LACHHAB Portfolio</a></li>
             <li><a href="index.html">lab01 - Home page</a></li>
             <li><a href="aboutme.html">lab02 - About me</a></li>
             <li><a href="pie.html">lab02 - Receipe</a></li>
+            <li><a href="practise.html">lab03 - Practise</a></li>
             <li><a href="movie.html">lab03 - Movie Review</a></li>
             <li><a href="#">lab04</a></li>
             <li><a href="#">lab05</a></li>
@@ -101,10 +101,3 @@
 
 </html>
 
-
-<!--
-    I have learned a lot from this lab including how to using float boxes, menu, layout, and some advance float boxes. 
-    Firstly, I solved the problems myself which took me more than two hours, then I look at the solution afterward; 
-    It was way easier and shorter, to be honest. The things such as property "clear: left", "float: left", "overflow: hidden" surprised me so much, 
-    I did not understand that properly before.
--->
