--- a/pie.html
+++ b/pie.html
@@ -119,8 +119,8 @@
             <div class="content link">
                 <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10" target="blank">Search for
                     other lemon meringue pie recipes</a>
-                <a href="index.html">lab01 - Home page</a>
-                <a href="aboutme.html">lab02 - About me</a>
+                <a href="index.html">Home</a>
+                <a href="aboutme.html">About me</a>
             </div>
         </div>
     </div>
