--- a/practise.html
+++ b/practise.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+    <div class="header_section">
+        <div class="topmenu">
+            <a href="index.html" class="menu_item">
+                Home
+            </a>
+        </div>
+    </div>
     <div class="exercise">
         <div class="title">
             <h2>Float boxes</h2>
