--- a/movie.html
+++ b/movie.html
@@ -229,8 +229,14 @@
         </div>
     </div>
     <div id="certificates">
-        <a href="https://validator.w3.org/nu/" target="blank"><img src="pictures/w3c-html.png" alt="Valid HTML5"></a> <br>
-        <a href="http://jigsaw.w3.org/css-validator/" target="blank"><img src="pictures/w3c-css.png" alt="Valid CSS"></a>
+        <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' +
+        document.URL">
+        <img src="pictures/w3c-html.png" alt="html validator" />
+    </a>
+    <a href="http://jigsaw.w3.org/css-validator/validator?uri=referer" onclick="this.href='http://jigsaw.w3.org/css-validator/validator?uri=' +
+    document.URL">
+        <img src="pictures/vcss.gif" alt="Valid CSS!" />
+    </a>
     </div>
 </body>
 
