--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
             <li><a href="pie.html">lab02 - Receipe</a></li>
             <li><a href="practise.html">lab03 - Practise</a></li>
             <li><a href="movie.html">lab03 - Movie Review</a></li>
-            <li><a href="#">lab04</a></li>
-            <li><a href="#">lab05</a></li>
+            <li><a href="login.html">lab04 - Login</a></li>
+            <li><a href="new.html">lab04 - Add New Product</a></li>
+            <li><a href="javascript.html">lab05 - JavaScript</a></li>
             <li><a href="#">lab06</a></li>
             <li><a href="#">lab07</a></li>
             <li><a href="#">lab08</a></li>
