--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="pictures/favayoub.png" type="image/gif" />
+    <link rel="apple-touch-icon" href="pictures/favayoub.png" type="image/gif" />
     <title>Ayoub LACHHAB</title>
     <style>
         div.header {
