--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><a href="login.html">lab04 - Login</a></li>
             <li><a href="new.html">lab04 - Add New Product</a></li>
             <li><a href="javascript.html">lab05 - JavaScript</a></li>
-            <li><a href="#">lab06</a></li>
+            <li><a href="decorator.html">Lab 06 - Decorate My Text</a></li>
             <li><a href="#">lab07</a></li>
             <li><a href="#">lab08</a></li>
             <li><a href="#">lab09</a></li>
