--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <h1 style="padding: 15px;"><strong>Ayoub LACHHAB</strong></h1>
     <div class="body">
         <ul>
+            
             <li><a href="index.html">lab01 - Home page</a></li>
             <li><a href="aboutme.html">lab02 - About me</a></li>
             <li><a href="pie.html">lab02 - Receipe</a></li>
@@ -66,14 +67,12 @@
             <li><a href="new.html">lab04 - Add New Product</a></li>
             <li><a href="javascript.html">lab05 - JavaScript</a></li>
             <li><a href="decorator.html">Lab 06 - Decorate My Text</a></li>
-            <li><a href="https://github.com/LACHHABAYOUB/lachhabayoub/blob/main/js/lab7.js">lab07</a></li>
-            <li><a href="#">lab08</a></li>
+            <li><a href="https://github.com/LACHHABAYOUB/lachhabayoub/blob/main/js/lab7.js">lab07 - JS Exercises</a></li>
+            <li><a href="https://github.com/LACHHABAYOUB/lachhabayoub/blob/main/js/lab7.js">lab08 - JS Exercises</a></li>
             <li><a href="#">lab09</a></li>
             <li><a href="#">lab10</a></li>
             <li><a href="#">Final Project</a></li>
-
-
-
+            
         </ul>
     </div>
 
