--- a/lab9.html
+++ b/lab9.html
@@ -6,7 +6,7 @@
         <script src="js/lab9.js"></script>
     </head>
     <body>
-        <h1>Lab 09 - Using Inheritance, JQuery and DOM</h1>
+        <h1>Lab 09 - Using Inheritance</h1>
         <h4>Open console to view result of</h4>
         <ul>
             <li>Question 1</li>
