--- a/lab10.html
+++ b/lab10.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Lab 09</title>
-        <script src="js/lab10.js"></script>
+        <title>Lab 10</title>
+        <script type="module" src="js/main.js"></script>
+
     </head>
     <body>
         <h1>Lab 10 - Working with ES6 Classes and ES Modules/h1>
