--- a/lab10.html
+++ b/lab10.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <h1>Lab 10 - Working with ES6 Classes and ES Modules/h1>
+        <h1>Lab 10 - Working with ES6 Classes and ES Modules</h1>
         <h4>Open console to view result of</h4>
         <ul>
             <li>Question 1</li>
