--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a href="https://github.com/LACHHABAYOUB/lachhabayoub/blob/main/js/lab7.js">lab08 - JS Exercises</a></li>
             <li><a href="lab9.html">Lab 09 - Using Inheritance, JQuery and DOM</a></li>
             <li><a href="lab10.html">lab10- Working with ES6 Classes and ES Modules</a></li>
+            <li><a href="minibankappjquery/index.html">lab11- Working with JQuery and the DOM</a></li>
             <li><a href="#">Final Project</a></li>
 
 
