--- a/minibankappjquery/index.html
+++ b/minibankappjquery/index.html
@@ -101,7 +101,7 @@
                 CS472-WAP ::: Banking WebApp
             </span>
             <span style="float: right;">
-                O. Kalu, MIU ::: &copy; April 2021
+                A. LACHHAB, MIU ::: &copy; April 2021
             </span>
         </div>
     </footer>
