--- a/minibankappjquery/index.html
+++ b/minibankappjquery/index.html
@@ -62,6 +62,18 @@
                                 <option value="Savings">Savings</option>
                             </select>
                         </div>
+
+                        <div class="form-item">
+                            <br>
+                            <input class="form-check-input" type="checkbox" id="SavingBank" value="outPatientOnly">
+                            <label class="form-check-label" for="SavingBank">Savings </label>
+                            <input class="form-check-input" type="checkbox" id="CheckingBank" value="outPatientOnly">
+                            <label class="form-check-label" for="CheckingBank">Checking </label>
+                            <input class="form-check-input" type="checkbox" id="LoanBank" value="outPatientOnly">
+                            <label class="form-check-label" for="LoanBank">Loan </label>
+                        </div>
+
+
                     </div>   
                     <div class="form-row">
                         <input class="btn-std-med" id="btnCreate" type="submit" value="Create New Account">
@@ -101,7 +113,7 @@
                 CS472-WAP ::: Banking WebApp
             </span>
             <span style="float: right;">
-                A. LACHHAB, MIU ::: &copy; April 2021
+                O. Kalu, MIU ::: &copy; April 2021
             </span>
         </div>
     </footer>
