--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
         <div class="header">
-            <img src="https://media-exp1.licdn.com/dms/image/C5103AQF39hdqHDwiCQ/profile-displayphoto-shrink_400_400/0/1563195274807?e=1622073600&v=beta&t=tX-4PHW8oY3GRkXZ8S65FAU_IW75fjZ_Z2j0qs6IsfU"
+            <img src="https://avatars.githubusercontent.com/u/44031876?v=4"
                 alt="lachhab ayoub picture" style="border-radius: 50%; border: 1px solid black; height:125%">
 
         </div>
